# BiomarScan3D

./: .gitignore  gcp_list.txt  main.py  pyproject.toml  show_results.ipynb
results/: cameras.json  images.json  log.json  task_output.txt
results/entwine_pointcloud/: ept.json
results/entwine_pointcloud/ept-data/: 0-0-0-0.laz  1-0-0-0.laz  1-0-0-1.laz  1-0-1-0.laz  1-0-1-1.laz  1-1-0-0.laz  1-1-0-1.laz  1-1-1-0.laz  1-1-1-1.laz  2-0-1-1.laz  2-0-2-2.laz  2-0-2-3.laz  2-1-0-1.laz  2-1-1-1.laz  2-1-1-2.laz  2-1-2-1.laz  2-1-2-2.laz  2-1-3-1.laz  2-1-3-2.laz  2-2-0-1.laz  2-2-1-1.laz  2-2-1-2.laz  2-2-1-3.laz  2-2-2-1.laz  2-2-2-2.laz  2-2-3-2.laz  2-3-0-1.laz  2-3-1-1.laz  2-3-2-2.laz  3-1-3-3.laz  3-1-4-4.laz  3-1-4-6.laz  3-2-2-2.laz  3-2-2-3.laz  3-2-2-4.laz  (+105 more)
results/odm_dem/: dsm.tif  dtm.tif
results/odm_georeferencing/: gcp_list_utm.txt  ground_control_points.geojson  ground_control_points.gml  ground_control_points.gpkg  odm_georeferenced_model.boundary.json  odm_georeferenced_model.bounds.geojson  odm_georeferenced_model.bounds.gpkg  odm_georeferenced_model.info.json  odm_georeferenced_model.laz  odm_georeferenced_model.summary.json  odm_georeferencing_model_geo.txt  odm_sampled.las
results/odm_orthophoto/: odm_orthophoto.tif
results/odm_report/: camera_mappings.npz  shots.geojson  stats.json
results/odm_texturing/: odm_textured_model_geo.conf  odm_textured_model_geo.glb  odm_textured_model_geo.mtl
scripts/: display_results.py  extract_gcp.py  file.py  gcp_list.txt  generate_boundary.py  grid_gcp.ipynb  gsp.ipynb  rename_images.py  slider_color.py
(+3 files in other folders)
