[project]
name = "biomarscan3d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "laspy>=2.5.4",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "pydom>=0.4.0",
    "pyodm>=1.5.12",
    "rasterio>=1.4.3",
]
